namespace Hireblade.Gameplay
{
    internal interface IParticleEmitter
    {
        public void SetParticleFactory(IParticleFactory particleFactory);
    }
}
